src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__compact_details_connection.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
─────────────────────────━━━━━━━━━──────────────────────────────────────────────
Connection   Network   Process   Application   Health   Traffic                 
━━━━━━━━━━──────────────────────────────────────────────────────────────────────
▎ firefox → 140.82.121.4:443 [ESTABLISHED] · click a field to copy ─────────────
▎ Connection ───────────────────────────────────────────────────────────────────
Protocol              TCP                                                       
Status                Active (last seen <T> ago)                                 
Local Address         192.168.1.10:51234                                        
Remote Address        140.82.121.4:443                                          
Scope                 PUBLIC                                                    
State                 ESTABLISHED                                               
Process               firefox                                                   
PID                   2001                                                      
Service               https                                                     
Observed VLANs        -                                                         
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 v/V section/page  j/k connection  c copy remote addr            h help  q quit
