src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__compact_details_health.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
─────────────────────────━━━━━━━━━──────────────────────────────────────────────
Connection   Network   Process   Application   Health   Traffic                 
───────────────────────────────────────────────━━━━━━───────────────────────────
▎ firefox → 140.82.121.4:443 [ESTABLISHED] · click a field to copy ─────────────
▎ Transport Health ─────────────────────────────────────────────────────────────
Initial RTT           -                                                         
Live RTT              23.4ms                                                    
TCP Retransmits (R)   3                                                         
Out-of-Order (O)      1                                                         
Duplicate ACKs        0                                                         
Fast Retransmits      0                                                         
Window Size           -                                                         
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 v/V section/page  j/k connection  c copy remote addr            h help  q quit
