src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__compact_details_traffic.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
─────────────────────────━━━━━━━━━──────────────────────────────────────────────
Connection   Network   Process   Application   Health   Traffic                 
────────────────────────────────────────────────────────━━━━━━━─────────────────
▎ firefox → 140.82.121.4:443 [ESTABLISHED] · click a field to copy ─────────────
▎ Traffic Statistics · smoothed avg · 60s · B/s ────────────────────────────────
↓ RX Now 3.05 MiB/s  peak  3.05 MiB/s   ↑ TX Now 927.73 KiB/speak 927.73 KiB/s  
Total 234.38 KiB  ·  234 packets        Total 12.21 KiB  ·  12 packets          
Collecting traffic history...           Collecting traffic history...           
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 v/V section/page  j/k connection  c copy remote addr            h help  q quit
