src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__compact_graph_distribution.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
──────────────────────────────────────────────────━━━━━━━───────────────────────
Traffic   Health   Distribution                                                 
───────────────────━━━━━━━━━━━━─────────────────────────────────────────────────
▎ Application Distribution ────────────  ▎ Top Processes · smoothed 10s avg ────
DNS    ░░▒▓▓█··················  25.0%   Process                       Avg RX+TX
Other  ░░░░░▒▒▒▒▓▓▓▓▓████······  75.0%   firefox                      3.96 MiB/s
                                         sshd                         2.12 MiB/s
                                         systemd-resolved           128.91 KiB/s
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 v/V section  esc back                                           h help  q quit
