src/ui/snapshots/rustnet_monitor__ui__snapshot_tests__compact_graph_health.snap
---
source: src/ui/mod.rs
expression: output
---
 rustnet    1 Overview   2 Details   3 Activity   4 Graph   5 Host        ● eth0
──────────────────────────────────────────────────━━━━━━━───────────────────────
Traffic   Health   Distribution                                                 
──────────━━━━━━────────────────────────────────────────────────────────────────
▎ Observed Network Health ─────────────  ▎ TCP Counters ────────────────────────
Waiting for health data...                 Retransmits         0                
                                           Out of Order        0                
                                           Fast Retrans        0                
                                                                                
▎ Observed TCP States ──────────────────────────────────────────────────────────
     ESTAB ░░░░░░░░░░░░░░░░▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓███████████████    2   
 TIME_WAIT ░░░░░░░░▒▒▒▒▒▒▒▒▓▓▓▓▓▓▓▓██████▌······························    1   
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 v/V section  esc back                                           h help  q quit
